work in progress on card rendering pipeline